[metadata]
name = pypostalcode
version = 0.4.1
author = Scott Rodkey
author_email = rodkeyscott@gmail.com
description = Radius searches on Canadian postal codes, location data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Canada, postal, code, distance, geonames
url = https://github.com/inkjet/pypostalcode
license = MIT
classifiers =

[options]
packages = find:
zip_safe = False
py_modules =
    pypostalcode
install_requires =

[options.extras_require]
dev = pytz; timezonefinder

[options.package_data]
* =
    *.db
